Fix Google OAuth login

--- a/templates/businesses/signup.html
+++ b/templates/businesses/signup.html
@@ -16,10 +16,11 @@
                 <p>Start collecting reviews for your business</p>
             </div>
 
-
+        
             <a href="{% provider_login_url 'google' %}" class="google-btn">
-                <span>🔑</span> Sign up with Google
+                <span>🔑</span>Continue with Google
             </a>
+
 
             <!-- Google Signup Option (Primary) -->
              <div class="divider">
