Add Google OAuth login using Django Allauth

--- a/templates/businesses/login.html
+++ b/templates/businesses/login.html
@@ -17,9 +17,13 @@
                 <p>Sign in to your Review Collector account</p>
             </div>
 
-            
+            <a href="{% provider_login_url 'google' %}" class="google-btn">
+                <span>🔑</span> Continue with Google
+            </a>
 
-
+            <div class="divider">
+                <span>or</span>
+            </div>
 
             <!-- Traditional Login Form -->
             <form method="post" class="auth-form">
@@ -51,7 +55,7 @@
             </form>
 
             <div class="auth-footer">
-                <p>Don't have an account? <a href="{% url 'businesses:signup' %}">Sign up here</a></p>
+                <p>Don't have an account? <a href="{% url 'users:signup' %}">Sign up here</a></p>
             </div>
         </div>
     </div>
