Ignore SQLite database files

--- a/templates/businesses/sidebar.html
+++ b/templates/businesses/sidebar.html
@@ -7,12 +7,12 @@
         <a href="{% url 'businesses:dashboard' %}" class="nav-link {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">
           My Businesses
         </a>
-        <a href="{% url 'businesses:settings' %}" class="nav-link {% if request.resolver_match.url_name == 'settings' %}active{% endif %}">
+        <a href="{% url 'users:settings' %}" class="nav-link {% if request.resolver_match.url_name == 'settings' %}active{% endif %}">
           Settings
         </a>
     </nav>
     <div class="sidebar-bottom">
-        <a href="{% url 'businesses:logout' %}" class="nav-link logout-link">
+        <a href="{% url 'users:logout' %}" class="nav-link logout-link">
           Logout
         </a>
     </div>
